tests/fixtures/errors/member_access_on_non_struct.lox
# Dot access on a non-struct type — must fail at typecheck.
var n: number = 1;
var x = n.foo;
assert(false, "should not reach: dot on non-struct must have errored first");
